--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,15 @@
     align-items: center;
 }
 
+.weather-card {
+  margin: 60px auto;
+  height: 740px;
+  width: 450px;
+  background: #fff;
+  box-shadow: 0 1px 38px rgba(0, 0, 0, 0.15), 0 5px 12px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+}
+
 #foreCast{
     background-color:grey;
 }
